testes e verificação dos repositórios